# calculator

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yaml
src/calculator/: calculator.py
tests/: test_calculator.py
